# quickshell

./: BUILD.md  CMakeLists.txt
changelog/: next.md
src/dbus/dbusmenu/: CMakeLists.txt
src/services/: CMakeLists.txt
src/services/mpd/: CMakeLists.txt  module.md  mpd.cpp  mpd.hpp
src/wayland/: session_lock.cpp
